# MonteCarloSimulation

./: .clang-tidy  .gitignore  BUILD.MD  CMakeLists.txt  README.MD  TODO.MD  conanfile.py  find_all.sh
.github/workflows/: cmake-single-platform.yml
doc/: architecture.MD
include/Analysis/: Statistics.hpp  Visualization.hpp
include/IO/: ErrorCodes.hpp  IDataHandler.hpp  InputLoader.hpp  OutputSaver.hpp
include/Simulation/: Correlation.hpp  Parallelization.hpp  StochasticModels.hpp
src/: main.cpp
src/Analysis/: Statistics.cpp  Visualization.cpp
src/IO/: InputLoader.cpp  OutputSaver.cpp
src/Simulation/: Correlation.cpp  Parallelization.cpp  StochasticModels.cpp
tests/: test_correlation.cpp  test_parallelization.cpp
